@@ -18,8 +18,8 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with yoshimi.  If not, see <http://www.gnu.org/licenses/>.
 
-Modified October 2017
-} {in_source in_header
+Modified November 2017
+} {selected in_source in_header
 }
 
 decl {\#include <set>} {public local
@@ -37,8 +37,7 @@ decl {\#include "MasterUI.h"} {private global
 decl {\#include "Misc/SynthEngine.h"} {public global
 }
 
-class ParametersUI {selected
-} {
+class ParametersUI {} {
   Function {make_window(void)} {} {
     Fl_Window Recent {
       label {Recent Parameters}
@@ -52,7 +51,7 @@ class ParametersUI {selected
         CloseRecent->hide();
         Loading->show();
         vector<string> listType = *synth->getHistory(H_type);
-        string fle = listType.at(listType.size() - o->value());
+        string fle = listType.at(o->value()-1);
         switch(H_type)
         {
             case 3:
@@ -131,9 +130,9 @@ class ParametersUI {selected
     unsigned int offset = 0;
     if (listType.size() > MAX_HISTORY)
         offset = listType.size() -MAX_HISTORY;
-    for (vector<string>::reverse_iterator itr = listType.rbegin(); itr != listType.rend() - offset; ++itr)
+    for (vector<string>::iterator it = listType.begin(); it != listType.end() - offset; ++it)
     {
-        name = *itr;
+        name = *it;
         name_start = name.rfind("/");
         name_end = name.rfind(".");
         name = name.substr(name_start + 1, name_end - name_start - 1);
